force-app/main/default/objects/Payment_Shcedule__c/Payment_Shcedule__c.object-meta.xml
<CustomObject>
    <label>Payment Schedule</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Payment Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>