force-app/main/default/objects/Payment_Shcedule__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Schedule</relationshipLabel>
    <relationshipName>Payment_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>