force-app/main/default/objects/Payment_Shcedule__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>Customer_unit_Payment__c</referenceTo>
    <relationshipLabel>Payment Schedule</relationshipLabel>
    <relationshipName>Payment_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>