force-app/main/default/objects/Payment_Shcedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>